--- a/tmux.conf
+++ b/tmux.conf
@@ -19,3 +19,12 @@ bind -n M-Down select-pane -D
 #set -g mouse-select-window on
 #set -g mouse-select-pane on
 #set -g mouse-resize-pane on
+
+# Start window numbering at 1
+set -g base-index 1
+
+# Window switching
+bind -n S-Up new-window
+bind -n S-Down  confirm-before -p "kill-window #W? (y/n)" kill-window
+bind -n S-Left prev
+bind -n S-Right next
