Switched shift+... and alt+... for window and pane control

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,11 +9,11 @@ unbind %
 bind | split-window -h
 bind - split-window -v
 
-# Switch panes using Alt-arrow without prefix
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+# Switch panes using shift-arrow without prefix
+bind -n S-Left select-pane -L
+bind -n S-Right select-pane -R
+bind -n S-Up select-pane -U
+bind -n S-Down select-pane -D
 
 # Enable mouse control (clickable windows, panes, resizable panes)
 #set -g mouse-select-window on
@@ -24,7 +24,7 @@ bind -n M-Down select-pane -D
 set -g base-index 1
 
 # Window switching
-bind -n S-Up new-window
-bind -n S-Down  confirm-before -p "kill-window #W? (y/n)" kill-window
-bind -n S-Left prev
-bind -n S-Right next
+bind -n M-Up new-window
+bind -n M-Down  confirm-before -p "kill-window #W? (y/n)" kill-window
+bind -n M-Left prev
+bind -n M-Right next
